# XML_Apllication

./: README.md
Project/CI/xml_editor/: CMakeLists.txt  main.cpp
Project/CI/xml_editor/check_consistency/: check_xml_consistency.cpp  check_xml_consistency.h
Project/CI/xml_editor/compress/: compressing.cpp  compressing.h
Project/CI/xml_editor/converting_json/: converting_xml_to_json.cpp  converting_xml_to_json.h
Project/CI/xml_editor/decompress/: decompress.cpp  decompress.h
Project/CI/xml_editor/formatting/: formatting.cpp  formatting.h
Project/CI/xml_editor/minifying/: minifying.cpp  minifying.h
Project/CI/xml_editor/network analysis/: NetworkAnalysis.cpp  NetworkAnalysis.h  Post.h  User.h
Project/CI/xml_editor/representing xml/: Graph.h  Graph.tpp  representing.cpp  representing.h
Project/UI/ProjectDemo_2/: CMakeLists.txt  NetworkAnalysis.cpp  NetworkAnalysis.h  compression.cpp  compression.h  decompression.cpp  decompression.h  graph.cpp  graph.tpp  graph_parser.cpp  graph_parser.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  minifyxml.cpp  minifyxml.h  post.cpp  post.h  resources.qrc  tag.h  user.cpp  user.h  xml_editor.h  xml_parser.cpp  xml_parser.h  xmlfunction.cpp  xmlfunction.h  xmltojson.cpp  xmltojson.h
XML_Application/: CMakeLists.txt  main.cpp
src/CLI/: compress_Mo.cpp  decompress.cpp  file_compressor.cpp  json_converter.cpp  json_converter.h  main.cpp  valid_unvalid.cpp  xml_editor.h  xml_parser.cpp  xml_parser.h
